@@ -1,5 +1,10 @@
 2006-03-09 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* include/Makefile.am,
+	  src/Makefile.am: sorted filelistings.
+	  
+2006-03-09 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* src/Win_GParted.cc: only allow 'swapon' on real partitions
 	
 2006-03-09 Bart Hakvoort <hakvoort@cvs.gnome.org>
